@@ -50,6 +50,8 @@ Library
 Tests
 -----
 
+- GHOP 237: Rewrite test_thread using unittest.
+
 - Patch #2232: os.tmpfile might fail on Windows if the user has no
   permission to create files in the root directory.
 
